# basepak

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yaml
src/basepak/: __about__.py  __init__.py  abstract_classes.py  archive.py  cache.py  classes.py  complete.py  configer.py  confirm.py  consts.py  credentials.py  dotenv  exceptions.py  execute.py  fzf_wrapper.py  helpers.py  igz_mgmt_handler.py  k8s_utils.py  locks.py  log.py  manifest_handler.py  plan.py  platform_api.py  stats.py  strings.py  tail.py  tasks.py  time.py  units.py  versioning.py
src/basepak/templates/: __init__.py  batch_job.py  daemonset.py  persistent_volume_claim.py
tests/: __init__.py  test_complete.py  test_configer.py  test_confirm.py  test_credentials.py  test_execute.py  test_k8s_utils.py  test_locks.py  test_log.py  test_manifest_handler.py  test_platform_api.py  test_stats.py  test_strings.py  test_tail.py  test_tasks.py  test_templates.py  test_time.py  test_units.py  test_versioning.py
