[build-system]
requires = [
    'hatchling',
    'hatch-semver',
]
build-backend = 'hatchling.build'

[project.urls]
Documentation = 'https://github.com/tomaDev/basepak#readme'
Issues = 'https://github.com/tomaDev/basepak/issues'
Source = 'https://github.com/tomaDev/basepak'

[tool.hatch.version]
path = 'src/basepak/VERSION'
pattern = '(?P<version>.*)'
validate-bump = true
scheme = 'semver'


[project]
name = 'basepak'
dynamic = ['version']
description = ''
readme = 'README.md'
requires-python = '>=3.9'
authors = [
  { name = 'tomaDev', email = 'genins21@gmail.com' },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
        # urllib3 is only used here as a dependency of requests.
        # restricting version due to end of support for OpenSSL 1.0 (github.com/urllib3/urllib3/issues/2168)
        # should remove if we remove requests (in favor of httpx or such)
        # should upgrade (or remove) when we drop support for centos7 (data nodes to OpenSSL >=1.1.1)
        'urllib3==1.26.19',
        'requests',
        'click',
        'ruyaml',
        'paramiko',
        'tenacity',
        'rich',
        'psutil',
        'python-dotenv',
        'igz-mgmt',
]

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest>=8.3.3",
    "coverage",
    "pytest-cov",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    'tests/*',
    'src/basepak/exceptions.py',
    'src/basepak/platform_api.py',
    'src/basepak/k8s_utils.py',
]

[tool.coverage.paths]
basepak = ['src/basepak', '*/basepak/src/basepak']

[tool.coverage.report]
exclude_lines = [
  'no cov',
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
]
