[build-system]
requires = [
    'hatchling',
    'hatch-semver',
]
build-backend = 'hatchling.build'

[project.urls]
Documentation = 'https://github.com/tomaDev/basepak#readme'
Issues = 'https://github.com/tomaDev/basepak/issues'
Source = 'https://github.com/tomaDev/basepak'

[tool.hatch.version]
scheme = 'semver'
path = 'src/basepak/__init__.py'
validate-bump = true


[project]
name = 'basepak'
dynamic = ['version']
readme = 'README.md'
description = 'Iguazio CLI SDK'
requires-python = '>=3.9'
authors = [
  { name = 'tomaDev', email = 'genins21@gmail.com' },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
        'requests',
        'click',
        'ruyaml',
        'tenacity',
        'rich',
        'psutil',
        'python-dotenv',
        'igz-mgmt',
]
[tool.hatch.envs.default]
path = ".venv"  # should match to uv default venv path

[tool.hatch.envs.default.scripts]
lock = 'uv lock'
upgrade = 'uv sync --upgrade'
release = 'VERSION="$(hatch version)"; git tag $VERSION && git push origin $VERSION'

[tool.hatch.envs.hatch-test]
dependencies = [
    'pytest>=8.3.3',
    'coverage',
    'pytest-cov',
    'pytest-xdist',
]
install_project = true
randomize = true
parallel = true

[tool.hatch.envs.scan]
dependencies = [
    'bandit',
]
install_project = true

[tool.hatch.envs.types]
dependencies = [
    'mypy>=1.0.0',
    'types-requests',
    'types-click',
    'types-psutil',
]
[tool.hatch.envs.types.scripts]
check = 'mypy --install-types --pretty --non-interactive {args:src/basepak tests}'

[tool.bandit]
skips = [
    'B110',  # try_except_pass
    'B404',  # import_subprocess
    'B507',  # ssh_no_host_key_verification
    'B602',  # subprocess_popen_with_shell_equals_true
    'B603',  # subprocess_without_shell_equals_true
]

[tool.hatch.envs.scan.scripts]
scan = 'bandit --recursive src/basepak --configfile pyproject.toml'

[[tool.hatch.envs.hatch-test.matrix]]
python = ['3.9', '3.10', '3.11', '3.12', '3.13']

[tool.coverage.run]
branch = true
parallel = true
omit = [
    'tests/*',
    'src/basepak/exceptions.py',
    'src/basepak/platform_api.py',
]

[tool.coverage.paths]
basepak = ['src/basepak', '*/basepak/src/basepak']

[tool.coverage.report]
exclude_lines = [
  'no cov',
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
]
